@@ -282,6 +282,7 @@ INSERT INTO tconfig (token, value) VALUES ('meta_style', 'meta_pandora');
 INSERT INTO tconfig (token, value) VALUES ('enable_refr', 0);
 INSERT INTO tconfig (token, value) VALUES ('show_vc', 1);
 INSERT INTO tconfig (token, value) VALUES ('meta_num_elements', 1);
+INSERT INTO tconfig (token, value) VALUES ('inventory_changes_blacklist', '1,2,20,21');
 
 -- -----------------------------------------------------
 -- Table tpassword_history
